--- a/style.css
+++ b/style.css
@@ -120,6 +120,39 @@ figcaption{
     margin-right: 10px;
 }
 
+/* The 5 Project pages */
+.project-explanation{
+    text-align: center;
+    margin: 30px auto;
+    width: 80%;
+    color: orange;
+}
+.project-partners{
+    text-align: center;
+    margin: 20px;
+}
+.project-nav-links{
+    width: 500px;
+    margin: 30px auto;
+    overflow: hidden;
+}
+.project-nav-box{
+    float: left;
+    width: 150px;
+    margin: 0 5px;
+    background-color: navy;
+    padding: 10px;
+    border-radius: 25px;
+    text-align: center;
+}
+.project-nav-box a{
+    text-emphasis: none;
+    color: white;
+}
+.project-nav-box:hover{
+    background-color: rgb(93, 0, 255);
+}
+
 /* Footer for every page */
 footer{
     margin-top: 30px;
