--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ figcaption{
     margin: 20px auto;
     text-align: center;
 }
-.projects-item{
+.project-item{
     display: block;
     margin: 25px auto;
     background: linear-gradient(30deg, mediumseagreen, yellow);
@@ -124,33 +124,38 @@ figcaption{
 .project-explanation{
     text-align: center;
     margin: 30px auto;
-    width: 80%;
+    font-size: x-large;
+    margin-bottom: 30px;
+    width: 70%;
     color: orange;
 }
 .project-partners{
     text-align: center;
     margin: 20px;
+    margin-bottom: 100px;
 }
 .project-nav-links{
-    width: 500px;
+    width: 600px;
     margin: 30px auto;
+    margin-bottom: 80px;
     overflow: hidden;
 }
 .project-nav-box{
     float: left;
     width: 150px;
     margin: 0 5px;
-    background-color: navy;
+    background-color: black;
     padding: 10px;
     border-radius: 25px;
     text-align: center;
 }
 .project-nav-box a{
-    text-emphasis: none;
+    text-decoration: none;
     color: white;
+    display: block;
 }
 .project-nav-box:hover{
-    background-color: rgb(93, 0, 255);
+    background-color: orange;
 }
 
 /* Contact Me page */
@@ -185,10 +190,10 @@ button:hover{
 /* Footer for every page */
 footer{
     margin-top: 30px;
+    margin-bottom: 30px;
     text-align: center;
     color: white;
     padding: 5px 0;
-    background-color: none;
 }
 footer a{
     color: white;
