--- a/laptop.css
+++ b/laptop.css
@@ -1,15 +1,224 @@
-.top-links a {
-    margin: 0 20px;
+/* Laptop styles (960px and up) */
+/* Same as Regular Style Sheet */
+
+body{
+    margin: 0;
+    padding: 0;
+    background: linear-gradient(black, rgb(0, 0, 128), rgb(15, 76, 129));
+    font-family: Arial, sans-serif;
+    color: white;
+}
+.homepage-title, .page-title{
+    color: white;
+    font-size: 40px;
+    text-align: center;
+}
+.homepage-information{
+    color: yellow;
+    font-size: 30px;
+    text-align: center;
+}
+.top-links{
+    text-align: center;
+    background-color: black;
+    padding: 10px 0;
+}
+.top-links a{
+    background-color: navy;
+    color: white;
+    text-decoration: none;
     padding: 5px 20px;
+    margin: 5px;
+    border-radius: 30px;
     font-size: 18px;
 }
-.project-item {
+.top-links a:hover{
+    background-color: rgb(69, 104, 130);
+}
+.bottom-links{
+    text-align: center;
+    margin-top: 40px;
+}
+.box{
+    width: 200px;
+    height: 100px;
+    margin: 20px auto;
+    text-align: center;
+    background-color: black;
+    border-radius: 75px;
+}
+.bottom-links a{
+    color: white;
+    text-decoration: none;
+    display: block;
+    line-height: 100px;
+    font-size: 20px;
+}
+.box:hover{
+    background-color: rgb(93, 0, 255);
+}
+figure{
+    background-color: white;
+    width: 200px;
+    margin: 20px auto;
+    padding: 5px;
+    text-align: center;
+    border: 2px solid black;
+}
+figcaption{
+    text-align: center;
+    font-size: large;
+    background-color: orange;
+    color: white;
+    padding: 1px;
+}
+.intro{
+    text-align: center;
+    margin: 20px auto;
+}
+.vid{
+    text-align: center;
+    margin: 20px auto;
+}
+.games-info{
+    text-align: center;
+    margin: 20px auto;
+}
+.resume-section{
+    width: 80%;
+    margin: 30px auto;
+    text-align: center;
+    color: white;
+}
+.resume-section h2{
+    color: orange;
+    margin-bottom: 10px;
+}
+.resume-section h3{
+    color: yellow;
+    margin-top: 15px;
+}
+.resume-section{
+    margin: 5px 0;
+    width: auto;
+    text-align: center;
+}
+.projects-list{
+    width: 80%;
+    margin: 20px auto;
+    text-align: center;
+}
+.project-item{
+    display: block;
+    margin: 25px auto;
+    background: linear-gradient(30deg, mediumseagreen, yellow);
+    color: black;
+    text-decoration: none;
     width: 600px;
     font-size: 23px;
+    padding: 15px 20px;
+    border-radius: 50px;
 }
-#wrapper {
-    width: 60%;
+.project-item:hover{
+    background: orange;
+    color: white;
 }
-.prompts {
+.projectnum{
+    background-color: white;
+    color: mediumseagreen;
+    padding: 5px 12px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+.project-explanation{
+    text-align: center;
+    margin: 30px auto;
+    font-size: x-large;
+    margin-bottom: 30px;
+    width: 70%;
+    color: orange;
+}
+.project-partners{
+    text-align: center;
+    margin: 20px;
+    margin-bottom: 100px;
+}
+.project-nav-links{
+    width: 600px;
+    margin: 30px auto;
+    margin-bottom: 80px;
+    overflow: hidden;
+}
+.project-nav-box{
+    float: left;
+    width: 150px;
+    margin: 0 5px;
+    background-color: black;
+    padding: 10px;
+    border-radius: 25px;
+    text-align: center;
+}
+.project-nav-box a{
+    text-decoration: none;
+    color: white;
+    display: block;
+}
+.project-nav-box:hover{
+    background-color: orange;
+}
+#wrapper{
+    margin: 0 auto;
+    width: 80%;
+    text-align: center;
+}
+.prompts{
+    color: white;
+    font-size: 18px;
+    text-align: center;
     width: 60%;
+    margin: 0 auto;
+}
+.prompts input, .prompts textarea{
+    width: 100%;
+    padding: 5px;
+    margin-top: 0;
+}
+button{
+    width: 80px;
+    height: 30px;
+    margin-top: -20px;
+    background-color: black;
+    color: white;
+}
+button:hover{
+    background-color: orange;
+}
+footer{
+    margin-top: 30px;
+    margin-bottom: 30px;
+    text-align: center;
+    color: white;
+    padding: 5px 0;
+}
+footer a{
+    color: white;
+    text-decoration: none;
+}
+footer a:hover{
+    color: orange;
+}
+.Social-Media-Links{
+    text-align: center;
+    margin: 30px auto;
+}
+.Social-Media-Links a{
+    margin: 0 15px;
+}
+.Social-Media-Links img{
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+}
+.Social-Media-Links img:hover{
+    opacity: 50%;
 }
