--- a/mobile.css
+++ b/mobile.css
@@ -43,10 +43,16 @@ video{
     width: 120px;
     height: 50px;
     margin: 10px auto;
-    font-size: 14px;
     background: black;
-    color: white;
     border-radius: 75px;
     text-align: center;
+}
+.box a{
+    display: block;
+    width: 100%;
+    height: 100%;
+    color: white;
+    font-size: 14px;
+    text-decoration: none;
     line-height: 50px;
 }
