--- a/mobile.css
+++ b/mobile.css
@@ -14,6 +14,7 @@ video{
     display: block;
     margin: 10px auto;
 }
+/* The navigation bar at the top */
 .top-links{
     text-align: center;
 }
@@ -24,6 +25,7 @@ video{
     padding: 8px;
     font-size: 14px;
 }
+/* The 5 Project pages */
 .project-explanation h4{
     font-size: 14px;
 }
@@ -33,6 +35,7 @@ video{
     font-size: 14px;
     margin: 10px auto;
 }
+/* Home page navigation bar at the bottom */
 .bottom-links{
     text-align: center;
 }
